--- a/PRAKTIKUM 1/index.html
+++ b/PRAKTIKUM 1/index.html
@@ -46,7 +46,7 @@
         <b>Kemampuan</b> 
         <ul type="square">
             <li>Pengetahuan dasar HTML, CSS dan JavaScript</li>
-            <li>Pemahanman dasar desain</li>
+            <li>Pemahaman dasar desain</li>
             <li>Pengetahuan prinsip UX</li>
             <li>Kemampuan wireframing dan prototyping</li>
         </ul> Berikut adalah tautan ke portofolio saya:
